--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,12 +5,19 @@ platform :ios, '11.0'
 
 target 'RnRestaurantApp' do
   config = use_native_modules!
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
+
+  pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
+  pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
 
   target 'RnRestaurantAppTests' do
     inherit! :complete
