--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-permissions": "^3.3.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1",
