--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "axios": "^0.26.0",
+    "geolib": "^3.3.3",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "17.0.2",
@@ -24,10 +26,12 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "square": "^17.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
