--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-picker/picker": "^2.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "geolib": "^3.3.3",
+    "luxon": "^2.3.1",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "17.0.2",
@@ -27,6 +30,7 @@
     "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-query": "^3.34.16",
     "square": "^17.2.0"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/luxon": "^2.3.0",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
