--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-native": "0.67.3",
     "react-native-permissions": "^3.3.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.0.0",
     "react-query": "^3.34.16",
     "square": "^17.2.0"
