--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "^2.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "axios": "^0.26.0",
@@ -26,6 +27,7 @@
     "react": "17.0.2",
     "react-content-loader": "^6.2.0",
     "react-native": "0.67.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-permissions": "^3.3.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
