--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react": "17.0.2",
     "react-content-loader": "^6.2.0",
     "react-native": "0.67.3",
+    "react-native-currency-input": "^1.0.1",
+    "react-native-dialog": "^9.2.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-permissions": "^3.3.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.3.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-query": "^3.34.16",
